@@ -36,26 +36,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|io
-operator|.
-name|UnsupportedEncodingException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|net
-operator|.
-name|URLEncoder
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|ArrayList
@@ -581,7 +561,7 @@ name|res
 parameter_list|)
 block|{
 name|String
-name|origin
+name|originsList
 init|=
 name|encodeHeader
 argument_list|(
@@ -598,7 +578,7 @@ condition|(
 operator|!
 name|isCrossOrigin
 argument_list|(
-name|origin
+name|originsList
 argument_list|)
 condition|)
 block|{
@@ -607,9 +587,9 @@ block|}
 if|if
 condition|(
 operator|!
-name|isOriginAllowed
+name|areOriginsAllowed
 argument_list|(
-name|origin
+name|originsList
 argument_list|)
 condition|)
 block|{
@@ -663,7 +643,7 @@ name|setHeader
 argument_list|(
 name|ACCESS_CONTROL_ALLOW_ORIGIN
 argument_list|,
-name|origin
+name|originsList
 argument_list|)
 expr_stmt|;
 name|res
@@ -1017,55 +997,48 @@ return|return
 literal|null
 return|;
 block|}
-try|try
-block|{
 comment|// Protect against HTTP response splitting vulnerability
 comment|// since value is written as part of the response header
+comment|// Ensure this header only has one header by removing
+comment|// CRs and LFs
 return|return
-name|URLEncoder
-operator|.
-name|encode
-argument_list|(
 name|header
-argument_list|,
-literal|"ASCII"
+operator|.
+name|split
+argument_list|(
+literal|"\n|\r"
 argument_list|)
+index|[
+literal|0
+index|]
+operator|.
+name|trim
+argument_list|()
 return|;
 block|}
-catch|catch
-parameter_list|(
-name|UnsupportedEncodingException
-name|e
-parameter_list|)
-block|{
-return|return
-literal|null
-return|;
-block|}
-block|}
-DECL|method|isCrossOrigin (String origin)
+DECL|method|isCrossOrigin (String originsList)
 specifier|static
 name|boolean
 name|isCrossOrigin
 parameter_list|(
 name|String
-name|origin
+name|originsList
 parameter_list|)
 block|{
 return|return
-name|origin
+name|originsList
 operator|!=
 literal|null
 return|;
 block|}
 annotation|@
 name|VisibleForTesting
-DECL|method|isOriginAllowed (String origin)
+DECL|method|areOriginsAllowed (String originsList)
 name|boolean
-name|isOriginAllowed
+name|areOriginsAllowed
 parameter_list|(
 name|String
-name|origin
+name|originsList
 parameter_list|)
 block|{
 if|if
@@ -1077,6 +1050,28 @@ return|return
 literal|true
 return|;
 block|}
+name|String
+index|[]
+name|origins
+init|=
+name|originsList
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|split
+argument_list|(
+literal|"\\s+"
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|origin
+range|:
+name|origins
+control|)
+block|{
 for|for
 control|(
 name|String
@@ -1161,6 +1156,7 @@ block|{
 return|return
 literal|true
 return|;
+block|}
 block|}
 block|}
 return|return
